[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/Roboto/Roboto-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menus/LevelSelect.gd" type="Script" id=3]
[ext_resource path="res://art/start_menu_background.png" type="Texture" id=4]
[ext_resource path="res://art/ld-52-level-select_v1.ogg" type="AudioStream" id=5]
[ext_resource path="res://menus/LevelButton.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1600.0
margin_bottom = 600.0
texture = ExtResource( 4 )
expand = true

[node name="TitleContentContainer" type="VBoxContainer" parent="."]
anchor_left = 0.33
anchor_top = 0.25
anchor_right = 0.66
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Title" type="Label" parent="TitleContentContainer"]
margin_top = 27.0
margin_right = 393.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
text = "Level Select"
align = 1

[node name="SubTitle" type="Label" parent="TitleContentContainer"]
margin_top = 116.0
margin_right = 393.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 2 )
text = "Ludum Dare 52 Game Jam Entry
by Sam and Noah Bumgardner"
align = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="TitleContentContainer"]
margin_top = 161.0
margin_right = 393.0
margin_bottom = 273.0

[node name="LevelButton01" parent="TitleContentContainer/ButtonsContainer" instance=ExtResource( 6 )]

[node name="LevelButton02" type="Button" parent="TitleContentContainer/ButtonsContainer"]
margin_top = 29.0
margin_right = 393.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 3 )
text = "Level 2"

[node name="LevelButton03" type="Button" parent="TitleContentContainer/ButtonsContainer"]
margin_top = 58.0
margin_right = 393.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 3 )
text = "Level 3"

[node name="BackButton" type="Button" parent="TitleContentContainer/ButtonsContainer"]
margin_top = 87.0
margin_right = 393.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 3 )
text = "Back"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="TitleContentContainer/ButtonsContainer/LevelButton02" to="." method="_on_LevelButton02_pressed"]
[connection signal="pressed" from="TitleContentContainer/ButtonsContainer/LevelButton03" to="." method="_on_LevelButton03_pressed"]
[connection signal="pressed" from="TitleContentContainer/ButtonsContainer/BackButton" to="." method="_on_BackButton_pressed"]
